2008-04-29  René Rebe  <rene@exactcode.de>

        * libabi/opimport.cpp:
        * libpp/op_header.cpp:
        * libpp/profile.cpp:
        * libutil++/bfd_support.cpp:
        * libutil++/cverb.cpp:
        * libutil++/op_bfd.cpp:
        * libutil++/op_spu_bfd.cpp:
        * pp/common_option.cpp:
        * pp/opannotate_options.cpp:
        * pp/oparchive.cpp:
        * pp/opgprof_options.cpp: added explicit includes for C functions
	  as required for compilation with GCC-4.3

2008-04-28  Daniel Hansel <daniel.hansel@linux.vnet.ibm.com>

	* oprofile/agents/jvmpi/jvmpi_oprofile.cpp:
	* oprofile/agents/jvmpi/Makefile.am:
	* oprofile/agents/jvmti/libjvmti_oprofile.c:
	* oprofile/agents/jvmti/Makefile.am:
	* oprofile/agents/Makefile.am:
	* oprofile/autogen.sh:
	* oprofile/configure.in:
	* oprofile/daemon/init.c:
	* oprofile/daemon/Makefile.am:
	* oprofile/daemon/opd_anon.c:
	* oprofile/daemon/opd_pipe.c:
	* oprofile/daemon/opd_pipe.h:
	* oprofile/daemon/oprofiled.c:
	* oprofile/daemon/oprofiled.h:
	* oprofile/doc/Makefile.am:
	* oprofile/doc/op-jit-devel.xml:
	* oprofile/doc/oprofile.xml:
	* oprofile/libop/op_config.c:
	* oprofile/libop/op_config.h:
	* oprofile/libopagent/bfddefines.c:
	* oprofile/libopagent/jitdump.h:
	* oprofile/libopagent/Makefile.am:
	* oprofile/libopagent/opagent.c:
	* oprofile/libopagent/opagent.h:
	* oprofile/libopagent/opagent_symbols.ver:
	* oprofile/libpp/arrange_profiles.cpp:
	* oprofile/libpp/callgraph_container.cpp:
	* oprofile/libpp/filename_spec.cpp:
	* oprofile/libpp/filename_spec.h:
	* oprofile/libpp/op_header.cpp:
	* oprofile/libpp/op_header.h:
	* oprofile/libpp/parse_filename.cpp:
	* oprofile/libpp/parse_filename.h:
	* oprofile/libpp/profile_container.cpp:
	* oprofile/libpp/profile.cpp:
	* oprofile/libpp/profile.h:
	* oprofile/libpp/profile_spec.cpp:
	* oprofile/libregex/demangle_java_symbol.cpp:
	* oprofile/libregex/demangle_java_symbol.h:
	* oprofile/libregex/demangle_symbol.cpp:
	* oprofile/libregex/Makefile.am: